# LearnCpp

./: CMakeLists.txt  main.cpp
headers/: A_class.h  BulkQuote.h  Folder.h  HasPtr.h  HasPtrPointerType.h  IntEqual.h  Message.h  Person.h  QueryResult.h  Quote.h  Sales_item.h  Screen.h  StrVec.h  TextQuery.h  WIndow_mgr.h  bulk_quote.h  date.h  dynamic_memory.h  gen_algorithm.h  io.h  quote.h  seq_container.h
others/: enev  input  note.text  nums  odd
source/: Person.cpp  QueryResult.cpp  StrVec.cpp  TextQuery.cpp  basket.cpp  bulk_quote.cpp  disc_quote.cpp  dynamic_memory.cpp  gen_algorithm.cpp  io.cpp  limit_quote.cpp  quote.cpp  seq_container.cpp
